# NEMO-Cmd

./: .gitignore  .pre-commit-config.yaml  README.rst  bitbucket-pipelines.yml  environment-dev.yaml  environment-rtd.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: add-milestone-issue-pr.yaml  assign-issue-pr.yaml  codeql-analysis.yaml  docs-linkcheck.yaml  pytest-coverage.yaml  pytest-with-coverage.yaml  sphinx-linkcheck.yaml  update-pixi-lockfile.yaml
docs/: CHANGES.rst  Makefile  api.rst  conf.py  development.rst  index.rst  installation.rst  license_description.txt  pkg_development.rst  subcommands.rst
docs/run_description_file/: 3.4_yaml_file.rst  3.6_agrif_yaml_file.rst  3.6_yaml_file.rst  index.rst  nemo.yaml.example-NEMO-3.4  nemo.yaml.example-NEMO-3.6  nemo.yaml.sbatch-example-NEMO-3.6  nemoAGRIF.yaml.example-NEMO-3.6
env/: environment-dev.yaml  requirements.txt
envs/: environment-dev.yaml  environment-hpc.yaml  environment-rtd.yaml  environment-test.yaml  requirements.txt
nemo_cmd/: __about__.py  __init__.py  __pkg_metadata__.py  api.py  combine.py  deflate.py  fspath.py  gather.py  lib.py  main.py  namelist.py  prepare.py  run.py
pipelines-test-env/: Dockerfile  environment-test.yaml
tests/: test_api.py  test_combine.py  test_deflate.py  test_gather.py  test_namelist.py  test_prepare.py  test_run.py
