# Copyright 2013 – present by the SalishSeaCast contributors
# and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "NEMO-Cmd"
dynamic = [ "version" ]
description = "NEMO Command Processor"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Doug Latornell", email = "dlatornell@eoas.ubc.ca" },
]
keywords = ["automation", "oceanography", "ocean modelling", "UBC-MOAD"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for versions most recently used in development
    "arrow",
    "attrs",
    "cliff",
    "f90nml",
    "gitpython",
    "python-hglib",
    "pyyaml",
]

[project.urls]
"Documenation" = "https://nemo-cmd.readthedocs.io/en/latest/"
"Changelog" = "https://nemo-cmd.readthedocs.io/en/latest/CHANGES.html"
"Issue Tracker" = "https://github.com/SalishSeaCast/NEMO-Cmd/issues"
"Source Code" = "https://github.com/SalishSeaCast/NEMO-Cmd"

[project.scripts]
nemo = "nemo_cmd.main:main"

[project.entry-points.nemo]
combine = "nemo_cmd.combine:Combine"
deflate = "nemo_cmd.deflate:Deflate"
gather = "nemo_cmd.gather:Gather"
prepare = "nemo_cmd.prepare:Prepare"
run = "nemo_cmd.run:Run"


[tool.coverage.run]
branch = true
source = [ "nemo_cmd", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.version]
path = "nemo_cmd/__about__.py"
